@@ -1,6 +1,7 @@
 2012-07-08  6.7.8-3 Cristy  <quetzlzacatenango@image...>
   * Attenuate random noise (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21387).
+  * Return linear grayscale for gradient:white-black.
 
 2012-07-08  6.7.8-2 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.8-2, SVN revision 8621.
